applying width to fix wordbreak in mobile.

--- a/assets/less/reece-bathrooms.less
+++ b/assets/less/reece-bathrooms.less
@@ -1130,6 +1130,9 @@ RESPONSIVE OVERRIDES
             padding: 0 10px;
             vertical-align: middle;
         }
+        .brandPressDownloadLinkwrap{
+            width: 170px
+        }
     }
 
     .brandList{
